# CLIPS

./: .gitignore  CLAUDE.md
TradePilot/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
TradePilot/backend/alembic/: env.py
TradePilot/backend/alembic/versions/: 202605120001_baseline.py
TradePilot/backend/app/: __init__.py  celery_app.py  main.py  scheduler_app.py
TradePilot/backend/app/api/: __init__.py
TradePilot/backend/app/api/v1/: __init__.py  admin.py  auth.py  backtest.py  exports.py  indicators.py  market.py  ml_predictions.py  notifications.py  orders.py  portfolios.py  recommendations.py  reports.py  sectors.py  settings.py  signals.py  stocks.py  strategies.py  users.py
TradePilot/backend/app/api/websocket/: __init__.py  account_ws.py  auth.py  connection_manager.py  market_ws.py  notifications_ws.py  orderbook_ws.py  protocol.py
TradePilot/backend/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  metrics.py  middleware.py  pagination.py  redis_client.py  response.py  security.py
TradePilot/backend/app/domains/: __init__.py  brokers.py
TradePilot/backend/app/domains/enums/: __init__.py
TradePilot/backend/app/domains/ports/: __init__.py  account_port.py  market_data_port.py  order_router_port.py
TradePilot/backend/app/integrations/: __init__.py  factory.py
TradePilot/backend/app/integrations/creon/: __init__.py  client.py  event_listener.py  live_market_data.py  live_order_router.py  realtime_dispatcher.py
TradePilot/backend/app/integrations/kis/: __init__.py  account_adapter.py  auth.py  client.py  config.py  error_mapping.py  live_market_data.py  live_order_router.py
TradePilot/backend/app/integrations/kiwoom/: __init__.py  client.py  live_market_data.py  live_order_router.py
TradePilot/backend/app/integrations/notifications/: __init__.py  base.py  factory.py
TradePilot/backend/app/integrations/simulator/: __init__.py  sim_market_data.py  sim_order_router.py
TradePilot/backend/app/models/: __init__.py  analysis.py  backtest.py  base.py  market.py  notification.py  trade.py  user.py
TradePilot/backend/app/repositories/: __init__.py  backtest_repository.py  base.py  market_repository.py  ml_prediction_repository.py  notification_repository.py  order_repository.py  portfolio_repository.py  recommendation_repository.py  sector_repository.py  signal_repository.py  stock_repository.py  strategy_repository.py  user_repository.py
TradePilot/backend/app/schemas/: __init__.py  admin.py  auth.py  backtest.py  export.py  indicator.py  market.py  ml_prediction.py  notification.py  order.py  portfolio.py  recommendation.py  report.py  sector.py  settings.py  signal.py  stock.py  strategy.py  user.py
TradePilot/backend/app/services/: __init__.py  alert_rule_engine.py  auth_service.py  backtest_service.py  calendar_service.py  export_service.py  indicator_service.py  kill_switch_service.py  market_service.py  ml_prediction_service.py  notification_service.py  order_service.py  portfolio_service.py  recommendation_service.py  report_service.py  sector_service.py  settings_service.py  signal_management_service.py  signal_service.py  stock_service.py  strategy_service.py  trade_limit_service.py  user_service.py
TradePilot/backend/app/services/backtest_engine/: README.md  __init__.py  config.py  data_loader.py  executor.py  indicators.py  metrics.py  portfolio.py  runner.py
TradePilot/backend/app/services/data_ingestion/: __init__.py  backfill.py  config.py  partitioner.py  validator.py
TradePilot/backend/app/services/export_engine/: __init__.py  config.py  runner.py  s3_uploader.py
TradePilot/backend/app/services/ml_engine/: README.md  __init__.py  config.py  dataset.py  features.py  model.py  predictor.py  registry.py  synthetic.py  trainer.py
TradePilot/backend/app/workers/: __init__.py  celery_app.py
TradePilot/backend/app/workers/tasks/: __init__.py  backtest_tasks.py  calendar_tasks.py  cleanup_tasks.py  export_tasks.py  ml_tasks.py  (+5 more)
TradePilot/backend/models/: README.md
TradePilot/backend/tests/: conftest.py
TradePilot/backend/tests/integration/: test_auth_api.py  test_backtest_flow.py  test_calendar_api.py  test_creon_e2e.py  test_exports_api.py  test_ingestion_admin.py  test_market_settings_api.py  test_ml_flow.py  test_notification_flow.py  test_notifications_api.py  test_order_api.py  test_strategies_api.py  test_users_api.py  test_websocket.py
TradePilot/backend/tests/qa/: __init__.py  test_idempotency.py  test_indicator_correctness.py  test_kill_switch.py  test_pagination_response.py  test_rate_limit.py  test_security_gates_regression.py  test_security_jwt_otp.py  test_trade_limits.py  test_trade_mode_guard.py
TradePilot/backend/tests/unit/: test_auth_refresh_rotation.py  test_backtest_engine.py  test_broker_factory.py  test_calendar_service.py  test_connection_manager.py  test_data_ingestion.py  test_export_engine.py  test_indicator_service.py  test_kill_switch_service.py  test_kis_adapter.py  test_log_masking.py  test_ml_engine.py  test_ml_multistock.py  test_notification_channels.py  test_orderbook_dispatch.py  test_security.py  test_sim_router.py  test_webpush_channel.py
TradePilot/creon-gateway/: .env.example  Dockerfile.windows-note.md  README.md  pyproject.toml
TradePilot/creon-gateway/creon_gateway/: __init__.py  config.py  creon_adapter.py  event_publisher.py  healthbeat.py  main.py  mock_orderbook_worker.py  mock_tick_worker.py
TradePilot/creon-gateway/scripts/: README.md  cpStartup-template.bat  register-task.ps1  start-gateway.ps1
TradePilot/creon-gateway/tests/: conftest.py  test_api_endpoints.py  test_creon_adapter.py  test_healthbeat.py  test_orderbook_publish.py
TradePilot/kiwoom-gateway/: .env.example  README.md  pyproject.toml
TradePilot/kiwoom-gateway/kiwoom_gateway/: __init__.py  config.py  event_publisher.py  healthbeat.py  kiwoom_adapter.py  main.py
TradePilot/kiwoom-gateway/scripts/: cpStartup-template.bat  register-task.ps1  start-gateway.ps1
TradePilot/kiwoom-gateway/tests/: test_kiwoom_adapter.py
(+1226 files in other folders)
