[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepilot-creon-gateway"
version = "1.0.0"
description = "TradePilot CREON Plus 어댑터 게이트웨이 (Windows 전용)"
requires-python = ">=3.11,<3.12"
readme = "README.md"

dependencies = [
    "fastapi==0.110.*",
    "uvicorn[standard]==0.29.*",
    "pydantic==2.6.*",
    "pydantic-settings==2.2.*",
    "redis==5.0.*",
    "httpx==0.27.*",
    "structlog==24.1.*",
    "orjson==3.9.*",
    # pywin32 는 Windows 32-bit Python에서만 설치 (조건부)
    # 운영 환경에서는 별도 requirements-win.txt로 관리한다.
]

[project.optional-dependencies]
windows = [
    "pywin32==306",
]

[tool.setuptools.packages.find]
include = ["creon_gateway*"]
